-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Sharding NYC
-
Minor Change
-
ALL
-
v7.0, v6.0, v5.0, v4.4
-
-
Sharding NYC 2023-07-10, Sharding NYC 2023-07-24, Sharding NYC 2023-08-07, Sharding NYC 2023-08-21, Sharding NYC 2023-09-04
-
4
-
None
-
None
-
None
-
None
-
None
-
None
-
None
mongos does not report writeConcernError in presence of writeErrors.
This behavior is unexpected because it is different from the behavior of mongod which report both writeConcernError and writeErrors:
shard01 [direct: primary] test> db.runCommand({"insert": "coll", "documents": [{_id: 3}], writeConcern: { w: "majority", j: true, wtimeout: 1000 }})
Uncaught:
MongoWriteConcernError: waiting for replication timed out
Additional information: {
wtimeout: true,
writeConcern: {
w: 'majority',
j: true,
wtimeout: 1000,
provenance: 'clientSupplied'
}
}
Result: {
n: 0,
electionId: ObjectId("7fffffff0000000000000001"),
opTime: { ts: Timestamp({ t: 1687374618, i: 1 }), t: Long("1") },
writeErrors: [
{
index: 0,
code: 11000,
errmsg: 'E11000 duplicate key error collection: test.coll index: _id_ dup key: { _id: 3 }',
keyPattern: { _id: 1 },
keyValue: { _id: 3 }
}
],
writeConcernError: {
code: 64,
codeName: 'WriteConcernFailed',
errmsg: 'waiting for replication timed out',
errInfo: {
wtimeout: true,
writeConcern: {
w: 'majority',
j: true,
wtimeout: 1000,
provenance: 'clientSupplied'
}
}
},
ok: 1,
lastCommittedOpTime: Timestamp({ t: 1687371016, i: 1 }),
'$clusterTime': {
clusterTime: Timestamp({ t: 1687374623, i: 1 }),
signature: {
hash: Binary(Buffer.from("0000000000000000000000000000000000000000", "hex"), 0),
keyId: Long("0")
}
},
operationTime: Timestamp({ t: 1687374618, i: 1 })
}
- fixes
-
SERVER-113256 [Summary] write concern error reporting issues
-
- Closed
-
- is depended on by
-
SERVER-80103 Mongos WriteConcernError Behavior Differs from Mongod
-
- Closed
-
-
COMPASS-7133 Investigate changes in SERVER-78311: mongos does not report writeConcernError in presence of writeErrors for insert command
-
- Closed
-
-
TOOLS-3692 Investigate changes in SERVER-78311: mongos does not report writeConcernError in presence of writeErrors for insert command
-
- Closed
-
- is related to
-
SERVER-97470 findAndModify: Mongos WriteConcernError Behavior Differs from Mongod
-
- Closed
-
-
SERVER-80103 Mongos WriteConcernError Behavior Differs from Mongod
-
- Closed
-
-
SERVER-84081 FLE2 write error hides write concern error
-
- Closed
-
-
SERVER-76954 Support write concern and handle write concern errors on mongos
-
- Closed
-
-
TOOLS-4013 Workaround for SERVER-78311 - Add a read concern majority check after MongoRestore.CreateCollection
-
- High Priority
-
- related to
-
SERVER-73553 Ensure mongos create command returns WriteConcern with higher precedence over NamespaceNotFound
-
- Closed
-
-
SERVER-81246 FLE WriteConcernError behavior unclear
-
- Closed
-
-
SERVER-81259 updateOne without shard key does not handle WriteConcernErrors properly
-
- Closed
-