SERVER-78311 Mongos no longer suppresses writeConcernErrors (#27883)

GitOrigin-RevId: 55bda7f6f5e10256b71a3e54d2234588ea723685